--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,8 @@
         {% endif %}
         
 <p class="view"><a href="https://www.linkedin.com/in/adiack/">Visit my Linkedin Profile</a></p>
+<p class="view"><a href="https://twitter.com/A__Diack">Follow me on Twitter</a></p>
+
 
       </header>
       <section>
