--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,10 @@
         </ul>
         {% endif %}
         
-<p class="view"><a href="https://www.linkedin.com/in/adiack/">Visit my Linkedin Profile</a></p>
-<p class="view"><a href="https://twitter.com/A__Diack">Follow me on Twitter</a></p>
+
+<p class="view"><a href="https://mastodon.social/@Diack">Mastodon</a></p>
+<p class="view"><a href="https://www.linkedin.com/in/adiack/">Linkedin</a></p>
+<p class="view"><a href="https://twitter.com/A__Diack">Twitter</a></p>
 
 
       </header>
