--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
         
 
 <p class="view"><a href="https://mastodon.social/@Diack">Mastodon</a></p>
-<p class="view">Nostr Public key: b0f4a109a0fa0f1e128a24cd72512b4e790b960e7b2e38db9675234ddd4e5ebb</p>
+<p class="wrapper">Nostr Public key: b0f4a109a0fa0f1e128a24cd72512b4e790b960e7b2e38db9675234ddd4e5ebb</p>
 <p class="view"><a href="https://www.linkedin.com/in/adiack/">Linkedin</a></p>
 <p class="view"><a href="https://twitter.com/A__Diack">Twitter</a></p>
 
