--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,7 @@
 <p class="view"><a href="https://www.linkedin.com/in/adiack/">Linkedin</a></p>
 <p class="view"><a href="https://twitter.com/A__Diack">Twitter</a></p>
 
-
-
+<a rel="me" href="https://mastodon.social/@Diack">Mastodon</a>
       </header>
       <section>
 
