--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,11 +48,11 @@
         {% endif %}
         
 
-<p class="view"><a href="https://adiack.github.io/blog.html">Blog</a></p>
-<p class="view"><a rel="me" href="https://mastodon.social/@Diack">Mastodon</a></p>
-<p class="view">Nostr: b0f4a109a0fa0f1e128a24cd72512<br>b4e790b960e7b2e38db9675234ddd4e5ebb</p>
 <p class="view"><a href="https://www.linkedin.com/in/adiack/">Linkedin</a></p>
 <p class="view"><a href="https://twitter.com/A__Diack">Twitter</a></p>
+<p class="view"><a href="https://bsky.app/profile/diack.bsky.social">Bluesky</a></p>
+<p class="view"><a rel="me" href="https://mastodon.social/@Diack">Mastodon</a></p>
+
  
       </header>
       <section>
