--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,10 +48,8 @@
         {% endif %}
         
 
-<p class="view"><a href="https://www.linkedin.com/in/adiack/">Linkedin</a></p>
-<p class="view"><a href="https://twitter.com/A__Diack">Twitter</a></p>
-<p class="view"><a href="https://bsky.app/profile/diack.bsky.social">Bluesky</a></p>
-<p class="view"><a rel="me" href="https://mastodon.social/@Diack">Mastodon</a></p>
+<p class="view"><a href="https://www.linkedin.com/in/adiack/">Linkedin </a>|<a href="https://twitter.com/A__Diack"> Twitter </a>|<a href="https://bsky.app/profile/diack.bsky.social"> Bluesky </a>|<a rel="me" href="https://mastodon.social/@Diack"> Mastodon</a></p>
+
 
  
       </header>
