--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@ header {
     border-radius: 20%;
   }
   p {
-    text-align: center;
+    text-align: left;
   }
   p.view {
     text-align: left;
