--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header class="site-header">
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
