--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,9 @@ section {
   margin: 0 auto;     /* Center the content section horizontally */
   padding: 10px;      /* Add padding to give some space around the content */
 }
+h1 {
+  font-size: 1.5em; /* Adjust the value as needed */
+}
 
 
 /* Adjust the width and margin of the wrapper/container */
