--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,10 +6,10 @@ header {
     border-radius: 20%;
   }
   p {
-    text-align: left;
+    text-align: center;
   }
   p.view {
-    text-align: left;
+    text-align: center;
   }
 }
 section {
