--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <div class="wrapper">
+      {% if page.layout != 'post' %} 
       <header class="site-header">
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
@@ -53,6 +54,7 @@
 
  
       </header>
+      {% endif %}
       <section>
 
       {{ content }}
