--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,9 @@
 @import "{{ site.theme }}";
 header {
   width: 25%;
+  padding: 10px; 
   img {
-    border-radius: 20%;
+    border-radius: 10%;
   }
   p {
     text-align: center;
@@ -14,7 +15,7 @@ header {
   }
 }
 section {
-  width: 70%;  /* Set a max width for the content section */
+  width: 60%;  /* Set a max width for the content section */
   margin: 0 auto;     /* Center the content section horizontally */
   padding: 10px;      /* Add padding to give some space around the content */
 }
