--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,10 +8,10 @@ header {
     border-radius: 10%;
   }
   p {
-    text-align: center;
+    text-align: left;
   }
   p.view {
-    text-align: center;
+    text-align: left;
   }
 }
 section {
