--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 @import "{{ site.theme }}";
-header {
+/* header {
   img {
     border-radius: 10%;
   }
@@ -11,7 +11,7 @@ header {
   p.view {
     text-align: left;
   }
-}
+} */
 section {
   width: 60%;  /* Set a max width for the content section */
   margin: 0 auto;     /* Center the content section horizontally */
