--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,7 @@ h1 {
 
 /* Target the header section using the class .site-header */
 .site-header {
-  max-width: 600px;  /* Set a maximum width for the header */
+  max-width: 100%;  /* Set a maximum width for the header */
   margin: 0 auto;     /* Center the header horizontally */
   padding: 10px;      /* Add padding inside the header for spacing */
 }
