--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     <div class="wrapper">
       {% if page.layout != 'post' %} 
       <header class="site-header">
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h2><a href="abdoulaye.ai">{{ site.title | default: site.github.repository_name }}</a></h2>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
